--- a/INSTALL
+++ b/INSTALL
@@ -7,10 +7,10 @@ Building and Installing Mes
 
 * Prerequisites
 ** Bootstrapping
-For bootstrapping, the only dependency is the hex2 linker
-*** [[https://github.com/oriansj/MESCC_Tools][MESCC_Tools]], 0.1 is known to work.
+For bootstrapping, the M1 macro assembler and hex2 linker and Nyacc
+*** [[https://github.com/oriansj/MESCC_Tools][MESCC_Tools]], 0.2 is known to work.
+*** [[https://savannah.gnu.org/projects/nyacc][Nyacc]], 0.80.3 is known to work.
 For development
-**
 ** Development
 For development, there are some more dependencies.
 *** Guix
@@ -19,11 +19,8 @@ For development, there are some more dependencies.
     guix environment --system=i686-linux -l guix.scm #32 bit only
 
 *** Other GNU/Linux
-**** [[https://github.com/oriansj/MESCC_Tools][MESCC_Tools]], 0.0 is known to work.
-
-**** [[https://savannah.gnu.org/projects/nyacc][Nyacc]], 0.78.0 is known to work.
-Matt Wette's C99 LALR parser.
-
+**** [[https://github.com/oriansj/MESCC_Tools][MESCC_Tools]], 0.2 is known to work.
+**** [[https://savannah.gnu.org/projects/nyacc][Nyacc]], 0.80.3 is known to work.
 **** GNU Gcc, 4.9.3 is known to work.
 The idea is to drop this requirement, of course.
 
