--- a/README
+++ b/README
@@ -1,26 +1,38 @@
                                                               -*- org -*-
 Mes -- Maxwell Equations of Software
 
-Mes aims to create full source bootstrapping for GuixSD: an entirely
-source-based bootstrap path.  The target is to [have GuixSD] boostrap
-from a minimal, easily inspectable binary --that should be readable as
-source-- into something close to R6RS Scheme.
+[[https://gitlab.com/janneke/mes][Mes]] aims to create full source bootstrapping for [[https://www.gnu.org/software/guix][GuixSD]] as part of the
+[[http://bootstrappable.org][bootstrappable builds]] effort.
 
 It currently consists of a mutual self-hosting [close to Guile-]
 Scheme interpreter prototype in C and a Nyacc-based C compiler in
-[Guile] Scheme.
+[Guile] Scheme.  This C prototype will be rewritten in [[https://github.com/oriansj/stage0][stage0]] M1
+assembly (or possibly stage2 slow-LISP, or ...).
 
 The Scheme interpreter prototype (mes.c) has a Garbage Collector, a
-library of loadable Scheme modules-- notably [[https://github.com/schemeway/lalr-scm][Dominique Boucher's LALR]],
-[[https://www.cs.indiana.edu/chezscheme/syntax-case/old-psyntax.html][Pre-R6RS portable syntax-case]] with R7RS ellipsis, [[http://www.nongnu.org/nyacc/][Matt Wette's Nyacc]]
-and [[https://www.gnu.org/software/guile/docs/master/guile.html/PEG-Parsing.html][Guile's PEG]] --and test suite just barely enough to support a
-simple REPL (repl.mes) and simple C-compiler (mescc.mes) that can
-produce the second initial ELF binary from binary from mes.c, in only
-about 2h30'.
+library of loadable Scheme modules-- notably Dominique Boucher's [[https://github.com/schemeway/lalr-scm][LALR]],
+Pre-R6RS [[https://www.cs.indiana.edu/chezscheme/syntax-case/old-psyntax.html][portable syntax-case]] with R7RS ellipsis, Matt Wette's [[https://www.nongnu.org/nyacc][Nyacc]],
+Guile's [[https://www.gnu.org/software/guile/docs/master/guile.html/PEG-Parsing.html][PEG]] --and test suite just barely enough to support a simple
+REPL (repl.mes) and simple C-compiler (mescc.mes).
 
-Mes is inspired by The Maxwell Equations of Software: [[http://www.softwarepreservation.org/projects/LISP/book/LISP%25201.5%2520Programmers%2520Manual.pdf][LISP-1.5]] -- John
-McCarthy page 13, [[https://www.gnu.org/software/guix/][GNU Guix's]] source/binary packaging transparency and
-[[https://github.com/oriansj/stage0][Jeremiah Orians's stage0]] bootstrap project.
+The simple C compiler can now compile a [[https://gitlab.com/janneke/tinycc][modified TinyCC]].  This needs
+more work.  A with gcc compiled tcc is [[https://lists.gnu.org/archive/html/tinycc-devel/2017-05/msg00103.html][known]] to compile GCC.
+
+Mes is inspired by The Maxwell Equations of Software: [[http://www.softwarepreservation.org/projects/LISP/book/LISP%2525201.5%252520Programmers%252520Manual.pdf][LISP-1.5]] -- John
+McCarthy page 13, GNU Guix's source/binary packaging transparency and
+Jeremiah Orians's stage0 ~300 byte self-hosting hex assembler.
+
+[0] https://gitlab.com/janneke/mes
+[1] https://www.gnu.org/software/guix
+[2] http://bootstrappable.org
+[3] https://github.com/oriansj/stage0
+[4] https://github.com/schemeway/lalr-scm
+[5] https://www.cs.indiana.edu/chezscheme/syntax-case/old-psyntax.html
+[6] https://www.nongnu.org/nyacc
+[7] https://www.gnu.org/software/guile/docs/master/guile.html/PEG-Parsing.html
+[8] https://gitlab.com/janneke/tinycc
+[9] https://lists.gnu.org/archive/html/tinycc-devel/2017-05/msg00103.html
+[10] http://www.softwarepreservation.org/projects/LISP/book/LISP%25201.5%2520Programmers%2520Manual.pdf
 
 Mes is free software, it is distributed under the terms of the GNU
 General Public Licence version 3 or later.  See the file COPYING.
