mescc: Move simple main to scaffold.
* scaffold/main.c (main): Move from doc/examples/main.c
* make.scm: Build it.
* README: Update.
* guile/mescc.scm (main):
* scripts/mescc.mes (main): Remove fallback doc/examples/main.c

--- a/README
+++ b/README
@@ -53,5 +53,5 @@ General Public Licence version 3 or later.  See the file COPYING.
 
 * Mescc compiler
 
-   scripts/mescc.mes doc/examples/main.c > a.out
+   scripts/mescc.mes scaffold/main.c > a.out
 
