--- a/README
+++ b/README
@@ -13,10 +13,10 @@ The Scheme interpreter prototype (mes.c) has a Garbage Collector, a
 library of loadable Scheme modules-- notably Dominique Boucher's [[https://github.com/schemeway/lalr-scm][LALR]],
 Pre-R6RS [[https://www.cs.indiana.edu/chezscheme/syntax-case/old-psyntax.html][portable syntax-case]] with R7RS ellipsis, Matt Wette's [[https://www.nongnu.org/nyacc][Nyacc]],
 Guile's [[https://www.gnu.org/software/guile/docs/master/guile.html/PEG-Parsing.html][PEG]] --and test suite just barely enough to support a simple
-REPL (repl.mes) and simple C-compiler (mescc.mes).
+REPL (repl.mes) and simple C-compiler MesCC (mescc.mes).
 
-The simple C compiler can now compile a [[https://gitlab.com/janneke/tinycc][modified TinyCC]].  This needs
-more work.  A with gcc compiled tcc is [[https://lists.gnu.org/archive/html/tinycc-devel/2017-05/msg00103.html][known]] to compile GCC.
+MesCC can compile a [[https://gitlab.com/janneke/tinycc][modified TinyCC]] that is close to being
+self-hosting.  A GNU Ccc-compiled tcc is [[https://lists.gnu.org/archive/html/tinycc-devel/2017-05/msg00103.html][known]] to compile GCC.
 
 Mes is inspired by The Maxwell Equations of Software: [[http://www.softwarepreservation.org/projects/LISP/book/LISP%2525201.5%252520Programmers%252520Manual.pdf][LISP-1.5]] -- John
 McCarthy page 13, GNU Guix's source/binary packaging transparency and
@@ -51,7 +51,7 @@ General Public Licence version 3 or later.  See the file COPYING.
 
    scripts/repl.mes
 
-* Mescc compiler
+* MesCC compiler
 
    scripts/mescc.mes scaffold/main.c > a.out
 
