--- a/HACKING
+++ b/HACKING
@@ -2,7 +2,16 @@
 
 * SETUP
     guix environment -l guix.scm     #64 bit + 32bit
+
+or
+
     guix environment --system=i686-linux -l guix.scm #32 bit only
+
+or
+
+    guix package --profile=~/.config/guix/mes --manifest=build-aux/manifest.scm
+    . ~/.config/guix/mes/etc/profile
+
 * BUILD
 There are two major modes to build Mes: true bootstrap and
 development.
@@ -18,32 +27,48 @@ To help development we assume ./configure sets these variables for make
    M1     -- M1
    PREFIX -- ""
 
-Mes is supposed to serve as a full equivalent for Guile, however mes is much, much
-slower than guile.  That's why we usually don't use mes during development.
+Mes is supposed to serve as a full equivalent for Guile, however Mes
+~30 times slower than Guile.  That's why we usually don't use Mes
+during development.
 
-gcc is used to verify the sanity of our C sources.
+Gcc is used to verify the sanity of our C sources.
 
 i686-unknown-linux-gnu-gcc is used to compare hex/assembly, to test
-the gcc variant of mes libc: lib/libc-gcc.c and steal ideas.
+the gcc variant of Mes-libc: lib/libc-gcc.c and steal ideas.  Target
+prefix: mlibc-gcc.
 
-Guile is used to develop mescc, the C compiler in Scheme that during
-bootstrapping will be executed by mes.
-
-** BOOTSTRAP BUILD
-In bootstrap mode, we don't have gcc (CC), we don't have pa 32 bit gcc
-(CC32), we have no guile (GUILE)...but we should have hex2, M1, and
-FIXME: mes.M1.
+Guile is used to develop MesCC, the C compiler in Scheme that during
+bootstrapping will be executed by Mes.
 
 mes is built from src/*.c and some out/src/*.h files that are snarfed from
 src/*.c by build-aux/mes-snarf.scm.
 
 Running ./make.scm produces a `script' file.
 
+** BOOTSTRAP BUILD
+
+    ./build.sh
+
+In bootstrap mode, we don't have gcc (CC), we don't have a 32 bit gcc
+(CC32), we have no guile (GUILE)...but we should have hex2, M1, and
+mes.M1.  That's a bootstrap problem which is currently ignored by
+using the mes-seed package.  mes.M1 will be produced by M2-Planet from
+mes.c.
+
+
 * ROADMAP
 ** TODO 
 *** release 0.x, unsorted
   - mes+mescc: compile a mes-tcc that can compile gcc-4.7.
+  - mes: set base-0.scm as default MES_BOOT, drop cat base-0.mes silliness.
+  - mes: real module support, bonus for supporting Guile's define-module/define-public syntax.
   - mes: prepare src/mes.c for M2-Planet transpiler.
+  - mes: produce functional mes from mes.M1 transpiled by M2-Planet.
+  - mes: we're a full Scheme now, drop .MES prefix, use .SCM.
+    + find a way to fix foo.mes/foo.scm trickery (full Guile-like module support?)
+    + how about setting `guile' or even `guile-2' cond-expand features
+      for external libraries (Nyacc) we look like Guile/Guile-2
+      internally, we could make sure to start every cond-expand with (mes)
   - mes: use more efficient scheme continuation stack (wip-array?)
   - mes: drop SCM stack in C / implement call/cc a la guile-1.8 setjmp?
   - mescc: refactor type(/ptr?) system; expr->type and ast-type->type.
@@ -66,7 +91,6 @@ Running ./make.scm produces a `script' file.
   - mescc: some success with 8cc,pcc,guile/libguile/eval.c.
   - build: guile/guix/make.scm: add file-types, intermediate, hash all dependencies
   - build: make.scm: imperative->declaritive
-  - mes: real module support, bonus for supporting Guile's define-module/define-public syntax.
   - get full source syntax-case up (Andre van Tonder?) OR drop it.
     https://srfi.schemers.org/srfi-72/srfi-72.html
     psyntax/syntax-case and rewrite Nyacc without syntax-case+R7RS Ellipsis.
@@ -90,6 +114,26 @@ eenough to work on compiling tinycc's tcc.c albeit a somewhat modified version.
 *** 0.3: Garbage collector
 *** 0.2: Support psyntax
 *** 0.1: Mes eval/apply feature complete; support syntax-rules, compile main.c using LALR, dump ELF
+
+
+* DEBUG
+  MES_DEBUG=<level> mes
+** Levels
+  1) Informational: 
+     - MODULEDIR
+     - included SCM modules and sources
+     - result of program
+     - gc stats at exit
+  2) opened files
+  3) runtime gc stats
+  4) detailed info
+     - parsed, expanded program
+     - list of builtins
+     - list of symbol
+     - opened input strings
+     - gc details
+  5) usage of opened input strings
+
 
 * Bugs
 ** mes: remove pmatch-car/pmatch-cdr hack.
